# Shikardos

./: .env.template  .gitignore  README.md  ini.coveragers  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_counters_py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_filters_py.html  z_145eef247bfb46b6_generator_py.html  z_145eef247bfb46b6_logger_config_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_pandas_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_read_financial_file_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_ciunters_py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_external_api_py.html  z_a44f0ac069e85531_test_filters_py.html  z_a44f0ac069e85531_test_generator_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_pandas_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_read_financial_file_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: counters.py  decorators.py  external_api.py  filters.py  generator.py  logger_config.py  main.py  masks.py  pandas.py  processing.py  read_financial_file.py  utils.py  widget.py
tests/: test_counters.py  test_decorators.py  test_external_api.py  test_filters.py  test_generator.py  test_main.py  (+7 more)
